# pico-wasm4

./: .gitignore  .gitmodules  CMakeLists.txt  pico_littlefs.cmake  pico_wamr.cmake
lib/pico-buttons/: CMakeLists.txt
lib/pico-buttons/include/pico/: buttons.h
lib/pico-buttons/include/pico/buttons/: config.h
lib/pico-buttons/src/: buttons.c
lib/pico-m3/: CMakeLists.txt  m3_bind.c  m3_env.c  m3_function.c  m3_info.c  m3_module.c
lib/pico-m3/include/pico/: m3.h
lib/pico-m3/include/pico/m3/: bind.h  code.h  compile.h  config.h  config_platforms.h  core.h  defs.h  env.h  exception.h  exec.h  exec_defs.h  function.h  info.h  math_utils.h
lib/pico-m3/src/: m3_code.c  m3_compile.c  m3_core.c  m3_env.c  m3_parse.c
lib/pico-st7789/: CMakeLists.txt  st7789.c  st7789_private.h
lib/pico-st7789/include/pico/: st7789.h
lib/pico-st7789/include/pico/st7789/: config.h
lib/pico-st7789/src/: st7789.c
lib/pico-tm1638/: CMakeLists.txt
lib/pico-tm1638/include/pico/: tm1638.h
lib/pico-tm1638/include/pico/tm1638/: config.h
lib/pico-tm1638/src/: tm1638.c  tm1638_private.h
lib/pico-w25qxx/: CMakeLists.txt
lib/pico-w25qxx/include/pico/: w25qxx.h
lib/pico-w25qxx/include/pico/w25qxx/: config.h  interface.h
lib/pico-w25qxx/src/: w25qxx.c
lib/pico-wasm/: CMakeLists.txt  wasm.c  wasm_c_stack.c  wasm_c_stack.h  wasm_loader.c  wasm_loader_cursor.c  wasm_loader_cursor.h  wasm_loader_parser.c  wasm_loader_parser.h  wasm_locals.c  wasm_locals.h  wasm_module.c  wasm_utils.c  wasm_utils.h  wasm_v_stack.c  wasm_v_stack.h
lib/pico-wasm/include/pico/: wasm.h  wasm_loader.h
lib/pico-wasm/include/pico/wasm/: c_stack.h  func.h  host.h  locals.h  module.h  table.h  v_stack.h
src/: compile_date.h  driver_w25qxx_interface.c  fat16.h  fs_utils.c  fs_utils.h  main.c  mimic_fat.c  mimic_fat.h  tusb_config.h  unicode.c  unicode.h  usb_descriptors.c  usb_msc.c  vm.c  vm.h  w25qxx_device.c  w25qxx_device.h  w25qxx_utils.c  wasm4-display.c  wasm4-display.h  wasm4-framebuffer.c  wasm4-framebuffer.h  wasm4-gamepad.c  wasm4-gamepad.h  wasm4-runtime.c  wasm4-runtime.h  wasm4.h
src/wasm/: cart1.h
